# rag-app

./: .env.example  .gitlab-ci.yml  Dockerfile  README.md  main.py  models.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: hf_sync.yml
precommit/: .pre-commit-config.yaml  README.md  run_audit.sh  run_tests.sh
routers/: documents.py  health.py  query.py
services/: embeddings.py  ingestion.py  llm.py  store.py
static/: index.html
