[tool.ruff]
line-length = 88
exclude = [".venv", "build", "dist", "__pycache__"]

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = false

[project]
name = "rag-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.138.0",
    "uvicorn[standard]==0.30.6",
    "python-multipart==0.0.31",
    "pypdf==6.13.3",
    "python-docx==1.1.2",
    "httpx==0.27.2",
    "numpy==1.26.4",
    "scikit-learn==1.5.2",
    "pydantic==2.9.0",
    "pre-commit",
    "ruff",
    "pytest",
    "mypy",
    "uv",
    "google-genai",
    "python-dotenv",
]
